samples/_failures_safe/1761477530_859d58_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5013d6c8.c: In function ‘main’:
./samples/SAFE/__tmp_5013d6c8.c:164:19: error: expected ‘;’ at end of input
  164 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_5013d6c8.c:164:13: error: expected declaration or statement at end of input
  164 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_5013d6c8.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5013d6c8.c:164:13: error: expected declaration or statement at end of input
